--- a/styles/variables.less
+++ b/styles/variables.less
@@ -15,11 +15,11 @@
 
 // Background
 @bg:                     #c0c0c0;
-@bg-shade:               #d6c114;
+@bg-shade:               grey;
 @bg-base:                #ffffff; // Accent color used in the header
 @bg-nav-bar:             #f0ecec; // Navigation bar
 @bg-main-content-frame:  #ffffff; // Frame that displays the articles
-@bg-section-header:      #c0c0c0;
+@bg-section-header:      #f0ecec;
 @bg-sidebar:             #f0ecec;
 
 // Primary "anchor" color for links
@@ -57,6 +57,9 @@
 @triple:                 @base * 3;
 @quadruple:              @base * 4;
 @quintuple:              @base * 5;
+
+// Spacing of Current Issue
+@space-sections-top: @double;
 
 //
 // Typography
